<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_rv"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/blue"
        android:orientation="vertical"
        android:scaleType="fitXY"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="170dp"
                android:layout_height="270dp"
                android:scaleType="fitXY"
                android:src="@color/black"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_hd_orange"
                tools:ignore="ContentDescription" />
        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:maxLines="2"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_rv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tittle" />

    <TextView
        android:id="@+id/text_type_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:maxLines="1"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_rv"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        tools:text="@string/type_duration" />

    <Button
        android:id="@+id/btn_teaser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/btn_trailer"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_type_duration" />

    <TextView
        android:id="@+id/tag_line_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-black"
        android:maxLines="2"
        android:text="@string/tv_overview"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_rv"
        app:layout_constraintTop_toBottomOf="@+id/btn_teaser" />

    <TextView
        android:id="@+id/text_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/open_sans_regular"
        android:maxLines="5"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_rv"
        app:layout_constraintTop_toBottomOf="@id/tag_line_overview"
        tools:text="@string/tv_overview" />

    <TextView
        android:id="@+id/text_creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-black"
        android:maxLines="1"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_rv"
        app:layout_constraintTop_toBottomOf="@+id/text_overview"
        tools:text="@string/creator_name" />

    <TextView
        android:id="@+id/tag_line_creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/open_sans_regular"
        android:maxLines="5"
        android:text="@string/tag_line_creator"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_rv"
        app:layout_constraintTop_toBottomOf="@id/text_creator" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>