<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_favorited_red"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />


</menu>